--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wp"]
 	path = wp
 	url = git://github.com/WordPress/WordPress.git
+[submodule "content/themes/wp-starter-theme"]
+	path = content/themes/wp-starter-theme
+	url = http://github.com/skaymuscrowley/wp-starter-theme
